--- a/AJAX/Pagina1.html
+++ b/AJAX/Pagina1.html
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>PAGINA 1</h1> 
-    pagina 1 pagina 1
-</body>
-</html>
+<h1>Página 1</h1>
+
+aslkdjhdaslfjkha sdflsah aslkd h;asd .asd hl
