--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Modelo</title>
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
-    <section class="container">
-        <h1>Lorem ipsum dolor sit amet consectetu</h1>
-        <a href="Pagina1.html">Pagina 1</a>
-        <a href="Pagina2.html">Pagina 2</a>
-        <a href="Pagina3.html">Pagina 3</a>
 
-        <div class="resultado"></div>
-    </section>
+  <section class="container">
+    <h1>Olá mundo!</h1>
+    <a href="pagina1.html">Página 1</a>
+    <a href="pagina2.html">Página 2</a>
+    <a href="pagina3.html">Página 3</a>
 
+    <div class="resultado"></div>
+  </section>
 
-    <script src="assets/js/main.js"></script>
+  <script src="./assets/js/main.js"></script>
 </body>
+
 </html>
